# wether_project_0108

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
src/: data.py  ui.py
